# dynamic-expenses

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml
.devcontainer/: base.Dockerfile  devcontainer.json  poetry-setup.sh
src/: __main__.py  category_analytics.py
src/resources/: expenses.json  groups.json  period_expenses.json
