[tool.poetry]
name = "dynamic-expenses"
version = "0.1.0"
description = "Organize your expenses dynamically"
authors = ["Gustavo Cornejo <g.cornejovivado@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dynamic_expenses"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
