[tool.poetry]
name = "dynamic-expenses"
version = "0.1.0"
description = "Organize your expenses dynamically"
authors = ["Gustavo Cornejo <g.cornejovivado@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = {"version" = "^2.1.0", "extras" = ["excel"] }
django = "^5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.0.287"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
